syntax = "proto3";

import "google/protobuf/empty.proto";
import "explorer.proto";
import "operation.proto";

package pb.v1;

option java_package = "co.ledger.lama.bitcoin.interpreter.protobuf";

service BitcoinInterpreterService {
  rpc SaveTransactions(SaveTransactionsRequest) returns (ResultCount) {}
  rpc GetLastBlocks(GetLastBlocksRequest) returns (GetLastBlocksResult) {}
  rpc RemoveDataFromCursor(DeleteTransactionsRequest) returns (ResultCount) {}
  rpc GetOperations(GetOperationsRequest) returns (GetOperationsResult) {}
  rpc ComputeOperations(ComputeOperationsRequest) returns (ResultCount) {}
  rpc GetUTXOs(GetUTXOsRequest) returns (GetUTXOsResult) {}
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResult) {}
}

// We sort by date
enum SortingOrder {
  DESC = 0;
  ASC = 1;
}

message SaveTransactionsRequest {
  bytes account_id = 1;
  repeated Transaction transactions = 2;
}

message GetLastBlocksRequest {
  bytes account_id = 1;
}

message GetLastBlocksResult {
  repeated Block blocks = 1;
}

message ComputeOperationsRequest {
  bytes account_id = 1;
  repeated AccountAddress addresses = 2;
}

message DeleteTransactionsRequest {
  bytes account_id = 1;
  int64 block_height = 2;
}

message GetOperationsRequest {
  bytes account_id = 1;
  int64 block_height = 2;
  int32 limit = 3;
  int32 offset = 4;
  SortingOrder sort = 5;
}

message GetOperationsResult {
  repeated Operation operations = 1;
  bool truncated = 2;
}

message GetUTXOsRequest {
  bytes account_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetUTXOsResult {
  repeated OutputView utxos = 1;
  bool truncated = 2;
}

message GetBalanceRequest {
  bytes account_id = 1;
}

message GetBalanceResult {
  int64 balance = 1;
  int32 utxos_count = 2;
  int64 amount_spent = 3;
  int64 amount_received = 4;
}

message ResultCount {
  int32 count = 1;
}