syntax = "proto3";

option java_package = "co.ledger.lama.bitcoin.interpreter.protobuf";

import "google/protobuf/timestamp.proto";

package pb.v1;

enum OperationType {
  SEND = 0;
  RECEIVE = 1;
}

enum ChangeType {
  EXTERNAL = 0; // normal addresses
  INTERNAL = 1; // change addresses
}

message Operation {
  bytes account_id = 1;
  string hash = 2;
  TransactionView transaction = 3;
  OperationType operation_type = 4;
  string amount = 5;
  string fees = 6;
  google.protobuf.Timestamp time = 7;
  int64 block_height = 8;
  string uid = 9;
}

message TransactionView {
  string id = 1;
  string raw_hex = 2;
  string hash = 3;
  google.protobuf.Timestamp received_at = 4;
  int64 lock_time = 5;
  string fees = 6;
  repeated InputView inputs = 7;
  repeated OutputView outputs = 8;
  BlockView block = 9;
  int32 confirmations = 10;
}

message InputView {
  string output_hash = 1;
  int32 output_index = 2;
  int32 input_index = 3;
  string value = 4;
  string address = 5;
  string script_signature = 6;
  repeated string txinwitness = 7;
  int64 sequence = 8;
  repeated uint32 derivation = 9;
}

message OutputView {
  int32 output_index = 1;
  string value = 2;
  string address = 3;
  string script_hex = 4;
  ChangeType change_type = 5;
  repeated uint32 derivation = 6;
}

message Utxo {
  string transaction_raw_hex = 1;
  string transaction_hash = 2;
  int32 output_index = 3;
  string value = 4;
  string address = 5;
  string script_hex = 6;
  ChangeType change_type = 7;
  repeated uint32 derivation = 8;
  string public_key = 9;
  google.protobuf.Timestamp time = 10;
}

message BlockView {
  string hash = 1;
  int64 height = 2;
  google.protobuf.Timestamp time = 3;
}

message AccountAddress {
  string account_address = 1;
  ChangeType change_type = 2;
  repeated int32 derivation = 3;
}

message CurrentBalance {
  string balance = 1;
  int32 utxos = 2;
  string received = 3;
  string sent = 4;
  string unconfirmed_balance = 5;
}

message BalanceHistory {
  bytes account_id = 1;
  string balance = 2;
  int64 block_height = 3;
  google.protobuf.Timestamp time = 4;
}

